# Telegram-bots

./: .gitignore  index.html
TodoBot/: pyproject.toml
TodoBot/TodoMini/: index.html  package-lock.json  package.json  telegram-webapp.d.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
TodoBot/TodoMini/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
TodoBot/TodoMini/src/api/: index.ts
TodoBot/TodoMini/src/api/services/: auth.ts  todo.ts
TodoBot/TodoMini/src/components/atoms/Button/: Button.module.scss  Button.tsx
TodoBot/TodoMini/src/components/atoms/Countdown/: Countdown.tsx
TodoBot/TodoMini/src/components/atoms/FieldPrimary/: FieldPrimary.module.scss  FieldPrimary.tsx
TodoBot/TodoMini/src/components/atoms/FieldSecondary/: FieldSecondary.module.scss  FieldSecondary.tsx
TodoBot/TodoMini/src/components/atoms/FormTitle/: FormTitle.module.scss  FormTitle.tsx
TodoBot/TodoMini/src/components/atoms/InputPrimary/: InputPrimary.module.scss  InputPrimary.tsx
TodoBot/TodoMini/src/components/atoms/Loading/: Loading.tsx
TodoBot/TodoMini/src/components/atoms/Logo/: Logo.module.scss  Logo.tsx
TodoBot/TodoMini/src/hook/: useDateTimeInputs.ts  useDateTimeLabels.ts  useFormattedDateTime copy.ts
TodoBot/TodoMini/src/store/: index.ts
TodoBot/TodoMini/src/store/slice/: activeItemSelector.ts  activeItemSlice.ts
TodoBot/TodoMini/src/styles/: _breakpoints.scss  _mixins.scss  _variables.scss  global.scss  mixins.scss
TodoBot/TodoMini/src/utils/: optimisticUpdateTodo.ts  submitTodo.ts
TodoBot/bot/: main.py
TodoBot/bot/commands/: __init__.py  start.py
(+51 files in other folders)
